# typst-hs

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  cabal.project  flake.nix  notes.org  pretty-tests.css  pretty-tests.sh  runtests.sh  scrape-symbols.hs  split.awk  test.sh  typst.cabal
.github/workflows/: ci.yml
app/: Main.hs
src/: Typst.hs
src/Typst/: Bind.hs  Constructors.hs  Evaluate.hs  Math.hs  MathClass.hs  Methods.hs  Pandoc.hs  Parse.hs  Regex.hs  Show.hs  Syntax.hs  Types.hs  Util.hs
src/Typst/Module/: Calc.hs  Emoji.hs  Math.hs  Standard.hs  Sym.hs
test/: Main.hs
test/skip/compiler/: show-node-05.out  show-text-07.out
test/typ/: coma-00.out
test/typ/bugs/: args-sink-00.out  args-sink-00.typ  args-underscore-00.out  args-underscore-00.typ  columns-1-00.out  columns-1-00.typ  expr_underscore_00.out  expr_underscore_00.typ  expr_underscore_01.out  expr_underscore_01.typ  expr_underscore_02.out  expr_underscore_02.typ  flow-1-00.out  flow-1-00.typ  flow-2-00.out  flow-2-00.typ  flow-3-00.out  flow-3-00.typ  flow-4-00.out  flow-4-00.typ  grid-1-00.out  grid-1-00.typ  grid-1-01.out  grid-1-01.typ  grid-2-00.out  grid-2-00.typ  grid-2-01.out  grid-2-01.typ  grid-3-00.out  grid-3-00.typ  math-realize-00.out  math-realize-00.typ  math-realize-01.out  math-realize-01.typ  math-realize-02.out  math-realize-02.typ  parameter-pattern-00.out  parameter-pattern-00.typ  place-base-00.out  place-base-00.typ  (+3 more)
test/typ/compiler/: array-00.out  array-00.typ  array-01.out  array-01.typ  array-02.out  array-02.typ  array-03.out  array-03.typ  array-04.typ  array-05.typ  array-06.out  array-06.typ  array-07.typ  array-08.typ  array-09.out  array-09.typ  array-10.out  array-10.typ  array-11.typ  array-12.typ  array-13.out  array-13.typ  array-14.out  array-14.typ  array-15.typ  array-16.out  array-16.typ  array-17.typ  array-18.typ  array-19.out  array-19.typ  array-20.out  array-20.typ  array-21.out  array-21.typ  array-22.out  array-22.typ  array-23.typ  array-24.out  array-24.typ  (+544 more)
test/typ/compute/: calc-00.out  calc-00.typ  calc-01.out  calc-01.typ  calc-02.typ  calc-03.typ  calc-04.typ  calc-05.typ  calc-06.out  calc-06.typ  calc-07.typ  calc-08.out  calc-08.typ  calc-09.out  calc-09.typ  calc-10.typ  calc-11.typ  calc-12.out  calc-12.typ  calc-13.typ  calc-14.typ  calc-15.out  calc-15.typ  calc-16.out  calc-16.typ  calc-17.typ  calc-18.typ  calc-19.typ  calc-20.typ  calc-21.typ  calc-22.typ  calc-23.typ  calc-24.typ  calc-25.typ  calc-26.out  calc-26.typ  calc-27.typ  calc-28.out  calc-28.typ  calc-29.typ  (+82 more)
test/typ/layout/: align-00.out  align-00.typ  align-01.out  align-01.typ  align-02.out  align-02.typ  align-03.out  align-03.typ  align-04.typ  align-05.typ  block-sizing-00.out  block-sizing-00.typ  block-sizing-01.out  block-sizing-01.typ  block-spacing-00.out  block-spacing-00.typ  clip-00.out  clip-00.typ  clip-01.out  clip-01.typ  clip-02.out  clip-02.typ  clip-03.out  clip-03.typ  columns-00.out  columns-00.typ  columns-01.out  columns-01.typ  columns-02.out  columns-02.typ  columns-03.out  columns-03.typ  columns-04.out  columns-04.typ  columns-05.out  columns-05.typ  columns-06.out  columns-06.typ  columns-07.out  columns-07.typ  (+292 more)
test/typ/math/: accent-00.out  accent-00.typ  accent-01.out  accent-01.typ  accent-02.out  accent-02.typ  accent-03.out  accent-03.typ  accent-04.out  accent-04.typ  accent-05.out  accent-05.typ  accent-06.out  accent-06.typ  alignment-00.out  alignment-00.typ  alignment-01.out  alignment-01.typ  alignment-02.out  alignment-02.typ  alignment-03.out  alignment-03.typ  attach-00.out  attach-00.typ  attach-01.out  attach-01.typ  attach-02.out  attach-02.typ  attach-03.out  attach-03.typ  attach-04.out  attach-04.typ  attach-05.out  attach-05.typ  attach-06.out  attach-06.typ  attach-07.out  attach-07.typ  attach-08.out  attach-08.typ  (+166 more)
test/typ/meta/: bibliography-00.typ  bibliography-01.out  bibliography-01.typ  bibliography-02.out  bibliography-02.typ  bibliography-03.typ  bibliography-04.out  bibliography-04.typ  bibliography-ordering-00.out  cite-footnote-00.out  counter-00.out  counter-00.typ  counter-01.out  counter-01.typ  counter-02.out  counter-02.typ  counter-03.out  counter-03.typ  counter-page-00.out  document-00.out  document-00.typ  document-01.out  document-01.typ  document-02.typ  document-03.typ  document-04.typ  document-05.typ  document-06.typ  document-07.typ  figure-00.out  figure-00.typ  figure-01.out  figure-01.typ  figure-02.out  figure-02.typ  figure-03.out  figure-03.typ  footnote-00.out  footnote-00.typ  footnote-01.out  (+80 more)
test/typ/regression/: issue1.out  issue1.typ  issue12.out  issue12.typ  issue15.out  issue15.typ  issue17.out  issue17.typ  issue19.out  issue19.typ  issue2.out  issue2.typ  issue20.out  issue20.typ  issue21.out  issue21.typ  issue21b.out  issue21b.typ  issue23.out  issue23.typ  issue25.out  issue25.typ  issue26.out  issue26.typ  issue3.out  issue3.typ  issue41.out  issue41.typ  issue43.out  issue43.typ  issue49.out  issue49.typ  issue5.out  issue5.typ  issue50.out  issue50.typ  issue54.out  issue54.typ  issue55.out  issue55.typ  (+33 more)
test/typ/text/: baseline-00.out  baseline-00.typ  case-00.out  case-00.typ  case-01.typ  chinese-00.out  chinese-00.typ  copy-paste-00.out  copy-paste-00.typ  deco-00.out  deco-00.typ  deco-01.out  deco-01.typ  deco-02.out  deco-02.typ  edge-00.out  edge-00.typ  edge-01.typ  edge-02.typ  em-00.out  em-00.typ  em-01.out  em-01.typ  emoji-00.out  emoji-00.typ  emoji-01.out  emoji-01.typ  emphasis-00.out  emphasis-00.typ  emphasis-01.out  emphasis-01.typ  emphasis-02.out  emphasis-02.typ  emphasis-03.typ  emphasis-04.typ  emphasis-05.typ  escape-00.out  escape-00.typ  escape-01.typ  escape-02.typ  (+169 more)
test/typ/visualize/: image-00.out  image-00.typ  image-01.out  image-01.typ  image-02.out  image-02.typ  image-03.out  image-03.typ  image-04.out  image-04.typ  image-05.out  image-05.typ  image-06.typ  image-07.typ  image-08.typ  line-00.out  line-00.typ  line-01.out  line-01.typ  line-02.typ  line-03.typ  path-00.out  path-00.typ  path-01.typ  path-02.typ  (+71 more)
(+4 files in other folders)
