cabal-version:      3.0
name:               typst
version:            0.1.0.0
synopsis:           Parsing and evaluating typst syntax.
description:        A library for parsing typst syntax, evaluating it,
                    and converting it to a pandoc AST. Typst (<https://typst.app>)
                    is a document layout and formatting language. This library
                    targets typst 0.4 and currently offers only partial support.
license:            BSD-3-Clause
license-file:       LICENSE
author:             John MacFarlane
maintainer:         jgm@berkeley.edu
copyright:          Copyright 2023 John MacFarlane
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: test/typ/**/*.typ
                    test/out/**/*.out
                    test/assets/files/*.png
                    test/assets/files/*.jpg
                    test/assets/files/*.bib
                    test/assets/files/*.csv
                    test/assets/files/*.json
                    test/assets/files/*.svg
                    test/assets/files/*.toml
                    test/assets/files/*.xml
                    test/assets/files/*.txt
                    test/assets/files/*.yaml
                    test/assets/files/*.html

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Typst
                      Typst.Parse
                      Typst.Evaluate
                      Typst.Types
                      Typst.Methods
                      Typst.Syntax
                      Typst.Util
                      Typst.Regex
                      Typst.Bind
                      Typst.Show
                      Typst.Pandoc
                      Typst.Module.Standard
                      Typst.Module.Math
                      Typst.Module.Sym
                      Typst.Module.Emoji
                      Typst.Module.Calc
    -- other-modules:
    -- other-extensions:
    build-depends:    base >= 4.14 && <= 5,
                      mtl,
                      vector,
                      parsec,
                      filepath,
                      containers,
                      ordered-containers,
                      text >= 2,
                      bytestring,
                      cassava,
                      aeson,
                      scientific,
                      xml-conduit,
                      yaml,
                      regex-tdfa,
                      array,
                      pandoc-types,
                      texmath,
                      pretty
    hs-source-dirs:   src
    default-language: Haskell2010

Flag executable
  description:       Compile executable to be used in testing and development.
  default:           False

executable typst-hs
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    if flag(executable)
      Buildable:         True
      Build-depends:
        base,
        typst,
        parsec,
        mtl,
        vector,
        containers,
        text >= 2,
        bytestring,
        pretty-show,
        ordered-containers,
        pandoc-types,
        texmath,
        pandoc
    else
      Buildable:         False

test-suite typst-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        typst,
        text >= 2,
        bytestring,
        filepath,
        pretty-show,
        tasty,
        tasty-golden
